--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -45,7 +45,6 @@
                       +currency-select()
 
     .application-form__card-line
-      +button({type:'bordered'})(type="button")
+      +button({border:'surfie-green'})(type="button")
         span Add language
-        span.button__icon
-          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14', classes:'button__icon'})
