--- a/app/pug/pages/application-page/step-2/card-2.pug
+++ b/app/pug/pages/application-page/step-2/card-2.pug
@@ -26,7 +26,6 @@
                 +input-animation({label:'Category:'})(type="text" value="Translator" id="category")
 
     .application-form__card-line
-      +button({type:'bordered'})(type="button")
+      +button({border:'surfie-green'})(type="button")
         span One more
-        span.button__icon
-          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14', classes:'button__icon'})
