--- a/app/pug/pages/application-page/step-3/_index.pug
+++ b/app/pug/pages/application-page/step-3/_index.pug
@@ -22,4 +22,4 @@ form.application-form
   .application-form__item
     include ./card-4
   .application-form__item
-    +button({fluid:true})(type="button" data-modal-open="registration-success-modal")| Complete application
+    +button({fluid:true, bg:'surfie-green'})(type="button" data-modal-open="registration-success-modal")| Complete application
