--- a/app/pug/pages/employers-page/employees.pug
+++ b/app/pug/pages/employers-page/employees.pug
@@ -26,7 +26,7 @@ include /partials/view-select
             .row-group__item
               p.font-bold Lukas Baranauskas
         td
-          +button({type:'bordered', border:'caribbean-green', noEvents:true})(type="button")| Freelance
+          +button({border:'caribbean-green', noEvents:true})(type="button")| Freelance
         td
           .row-group.row-group--sm.row-group--nowrap.row-group--align-center
             each icon in ['proofreading', 'translation']
@@ -53,7 +53,7 @@ include /partials/view-select
             .row-group__item
               p.font-bold Marija Juodijenė
         td
-          +button({type:'bordered', noEvents:true})(type="button")| Full time
+          +button({border:'surfie-green', noEvents:true})(type="button")| Full time
         td
           .row-group.row-group--sm.row-group--nowrap.row-group--align-center
             each icon in ['proofreading', 'translation', 'interpreting', 'creative-editing']
@@ -80,7 +80,7 @@ include /partials/view-select
             .row-group__item
               p.font-bold Marija Juodijenė
         td
-          +button({type:'bordered', noEvents:true})(type="button")| Full time
+          +button({border:'surfie-green', noEvents:true})(type="button")| Full time
         td
         td
           p --
@@ -99,7 +99,7 @@ include /partials/view-select
             .row-group__item
               p.font-bold Marija Juodijenė
         td
-          +button({type:'bordered', noEvents:true})(type="button")| Full time
+          +button({border:'surfie-green', noEvents:true})(type="button")| Full time
         td
           .row-group.row-group--sm.row-group--nowrap.row-group--align-center
             each icon in ['proofreading', 'translation', 'interpreting', 'creative-editing']
