--- a/app/pug/partials/password-change-success-modal.pug
+++ b/app/pug/partials/password-change-success-modal.pug
@@ -21,4 +21,4 @@ mixin password-change-success-modal(props = {})
         +palette()
           p.font-bold 6151651656156116
       .password-change-success-modal__button
-        +button({type:'bordered'})(type="button" data-modal-close="password-change-success-modal")| OK !
+        +button({border:'surfie-green'})(type="button" data-modal-close="password-change-success-modal")| OK !
