--- a/app/pug/partials/skills-dropdown.pug
+++ b/app/pug/partials/skills-dropdown.pug
@@ -6,7 +6,7 @@ mixin skills-dropdown(props = {})
 
   .dropdown.js-dropdown.skills-dropdown(data-dropdown="skills")
     .dropdown__toggle.skills-dropdown__toggle(data-dropdown-toggle="skills")
-      +button({type:'bordered', size:'20'})(type="button")
+      +button({border:'surfie-green', size:'20'})(type="button")
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
     .dropdown__body.skills-dropdown__body
       .skills-dropdown__header
