--- a/app/sass/components/massive-actions-dropdown.sass
+++ b/app/sass/components/massive-actions-dropdown.sass
@@ -1,17 +1,8 @@
 .massive-actions-dropdown
   display: inline-block
   &__toggle
-    display: flex
-    align-items: center
-    background-color: $c-alabaster
-    padding: 15px 20px
-    border-radius: $r-primary
-    &-title
-      margin-right: 10px
-    &-icon
-      transition: 0.2s
     &.is-active
-      .massive-actions-dropdown__toggle-icon
+      .button__icon
         transform: rotate(180deg)
   &__body
     right: 0
