--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,7 +41,7 @@
 @import ./components/radio
 @import ./components/checkbox
 @import ./components/button-group
-@import ./components/button
+@import ./components/button/button
 @import ./components/select
 @import ./components/dropdown
 @import ./components/burger
@@ -67,6 +67,7 @@
 @import ./components/user-dropdown-menu
 @import ./components/unread
 @import ./components/catalog
+@import ./components/catalog-navigation
 @import ./components/column-heading
 @import ./components/info-list
 @import ./components/notifications-list
