--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -32,7 +32,7 @@ block content
               .form__line
                 .column-group.column-group--md.column-group--justify-items-center
                   .column-group__item
-                    +button({fluid:true})(type="submit")| Sign in
+                    +button({fluid:true, bg:'surfie-green'})(type="submit")| Sign in
                   .column-group__item
                     +status-message({title:'Oops... Incorrect Email or Password.', icon:{name:'warning', width:'24', height:'24'}, color:'brick-red'})
                   .column-group__item
