--- a/app/pug/pages/application-page/step-1/card-7.pug
+++ b/app/pug/pages/application-page/step-1/card-7.pug
@@ -32,10 +32,9 @@
                     +currency-select()
 
     .application-form__card-line
-      +button({type:'bordered'})(type="button")
+      +button({border:'surfie-green'})(type="button")
         span Add language
-        span.button__icon
-          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14', classes:'button__icon'})
 
     .application-form__card-line
       .form-group
