--- a/app/pug/pages/application-page/step-2/_index.pug
+++ b/app/pug/pages/application-page/step-2/_index.pug
@@ -34,5 +34,5 @@ form.application-form
   .application-form__item
     .button-group
       +button({classes:'button-group__button', bg:'white'})(href="application-page-1.html")| Back
-      +button({classes:'button-group__button'})(href="application-page-3.html")| Next
+      +button({classes:'button-group__button', bg:'surfie-green'})(href="application-page-3.html")| Next
       +button({classes:'button-group__button', bg:'transparent'})| Discard
