--- a/app/pug/pages/employer-application-page/_index.pug
+++ b/app/pug/pages/employer-application-page/_index.pug
@@ -12,4 +12,4 @@ form.application-form
   .application-form__item
     include ./card-2
   .application-form__item
-    +button({fluid:true})(type="button" data-modal-open="registration-success-modal")| Complete application
+    +button({fluid:true, bg:'surfie-green'})(type="button" data-modal-open="registration-success-modal")| Complete application
