--- a/app/pug/partials/button.pug
+++ b/app/pug/partials/button.pug
@@ -1,5 +1,5 @@
 mixin button(props = {})
-  -const { tag, classes, bg, fluid, type, size, border, standard, shadow, disabled, inline, color, noEvents, start } = props
+  -const { tag, classes, bg, fluid, type, size, border, radius, standard, shadow, disabled, inline, color, noEvents, start } = props
   -const tagType = tag ? tag : (attributes.href ? 'a' : 'button')
   -
     const classnames = classNames({
@@ -11,10 +11,11 @@ mixin button(props = {})
       'button--shadowed': shadow,
       'button--start': start,
       [`button--${type}`]: type,
-      [`button--bg-${bg}`]: bg,
+      [`button--${bg}`]: bg,
       [`button--border-${border}`]: border,
       [`button--color-${color}`]: color,
       [`button--size-${size}`]: size,
+      [`button--radius-${radius}`]: radius,
       [classes]: classes
     })
 
