--- a/app/pug/partials/edit-avatar-tool.pug
+++ b/app/pug/partials/edit-avatar-tool.pug
@@ -24,6 +24,5 @@ mixin edit-avatar-tool(props = {})
         +button({bg:'alabaster', classes:'button-group__button edit-avatar-tool__upload', tag:'label'})
           +input({standard:false, hidden:true})(type="file" accept="image/*")
           span Upload new
-          span.button__icon
-            +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
-        +button({classes:'button-group__button'})(type="button" data-modal-close="edit-avatar-modal")| Apply
+          +icon({name:'plus', fill:'surfie-green', width:'10', height:'10', classes:'button__icon'})
+        +button({classes:'button-group__button', bg:'surfie-green'})(type="button" data-modal-close="edit-avatar-modal")| Apply
