--- a/app/pug/partials/registration-success-modal.pug
+++ b/app/pug/partials/registration-success-modal.pug
@@ -11,4 +11,4 @@ mixin registration-success-modal(props = {})
       .registration-success-modal__text
         p You will be noticed by email when your account will be activated.
       .registration-success-modal__button
-        +button({type:'bordered'})(type="button" data-modal-close="registration-success-modal")| Back to home page
+        +button({border:'surfie-green'})(type="button" data-modal-close="registration-success-modal")| Back to home page
