--- a/app/pug/partials/upload-documents.pug
+++ b/app/pug/partials/upload-documents.pug
@@ -9,7 +9,6 @@ mixin upload-documents(props = {})
       .upload-documents__header-button
         +button({bg:'white', shadow:true, disabled:true})(type="button")
           span Download all
-          span.button__icon
-            +icon({name:'download', width:'15', height:'13'})
+          +icon({name:'download', width:'15', height:'13', classes:'button__icon'})
     .upload-documents__content
       +upload-documents-box()
