--- a/app/sass/components/navigation.sass
+++ b/app/sass/components/navigation.sass
@@ -24,6 +24,7 @@
     border-radius: $r-secondary
     padding: 10px 12px
     transition: 0.2s
+    user-select: none
     &-unread
       margin-left: 10px
     &:hover,
