--- a/app/sass/components/tooltip.sass
+++ b/app/sass/components/tooltip.sass
@@ -1,6 +1,8 @@
 .tooltip
   position: relative
+  overflow: hidden
   &:hover
+    overflow: unset
     .tooltip__text
       visibility: visible
       opacity: 1
@@ -8,11 +10,11 @@
     position: absolute
     top: 100%
     right: 2px
-    visibility: hidden
     background-color: $c-white
     padding: 10px 25px
     border-radius: $r-primary
     z-index: 1
     box-shadow: $s-alt
+    visibility: hidden
     opacity: 0
     transition: 0.2s
