--- a/app/pug/pages/application-page/step-1/card-5.pug
+++ b/app/pug/pages/application-page/step-1/card-5.pug
@@ -36,7 +36,7 @@
                 p Your prefered price per <span class="font-bold">1 hr</span>
               .input-group
                 .input-group__input
-                  +input({})(type="number" placeholder="0.00")
+                  +input({bg:'alabaster'})(type="number" placeholder="0.00")
                 .input-group__append.input-group__append--p-0
                   +currency-select()
 
