--- a/app/pug/pages/application-page/step-1/card-6.pug
+++ b/app/pug/pages/application-page/step-1/card-6.pug
@@ -27,7 +27,7 @@
               .col-12.col-lg-8
                 .input-group
                   .input-group__input
-                    +input({})(type="number" placeholder="0.00")
+                    +input({bg:'alabaster'})(type="number" placeholder="0.00")
                   .input-group__append.input-group__append--p-0
                     +currency-select()
 
