--- a/app/pug/partials/edit-avatar-tool.pug
+++ b/app/pug/partials/edit-avatar-tool.pug
@@ -10,7 +10,7 @@ mixin edit-avatar-tool(props = {})
       h3 Renew profile image:
     label.edit-avatar-tool__placeholder
       .edit-avatar-tool__placeholder-wrap
-        +input({standard:false, hidden:true})(type="file" accept="image/*")
+        +input({standard:false, bg:'alabaster', hidden:true})(type="file" accept="image/*")
         h4.font-semibold.text-alto Upload a new image
     .edit-avatar-tool__image-box
       img(src="images/user/avatar.jpg", class="edit-avatar-tool__image" alt="avatar")
@@ -22,7 +22,7 @@ mixin edit-avatar-tool(props = {})
       +button({bg:'transparent', classes:'edit-avatar-tool__delete'})(type="button")| Delete current photo
       .button-group
         +button({bg:'alabaster', classes:'button-group__button edit-avatar-tool__upload', tag:'label'})
-          +input({standard:false, hidden:true})(type="file" accept="image/*")
+          +input({standard:false, bg:'alabaster', hidden:true})(type="file" accept="image/*")
           span Upload new
           +icon({name:'plus', fill:'surfie-green', width:'10', height:'10', classes:'button__icon'})
         +button({classes:'button-group__button', bg:'surfie-green'})(type="button" data-modal-close="edit-avatar-modal")| Apply
