--- a/app/pug/partials/input-animation.pug
+++ b/app/pug/partials/input-animation.pug
@@ -11,4 +11,4 @@ mixin input-animation(props = {})
     })
   div(class=classnames)
     label.input-animation__label(for=attributes.id) #{label}
-    +input({classes:inputClasses, bordered:true})&attributes(attributes)
+    +input({classes:inputClasses, border:'alto'})&attributes(attributes)
