--- a/app/sass/components/dropdown.sass
+++ b/app/sass/components/dropdown.sass
@@ -14,5 +14,6 @@
     margin-bottom: 20px
     overflow: hidden
     background-color: $c-white
+    border-radius: $r-primary
     box-shadow: $s-alt
     z-index: 200
