--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -34,7 +34,7 @@
 @import ./components/form-group
 @import ./components/form-divider
 @import ./components/textarea
-@import ./components/input
+@import ./components/input/input
 @import ./components/input-animation
 @import ./components/input-group
 @import ./components/input-range
@@ -85,3 +85,4 @@
 @import ./components/actions
 @import ./components/choose-actions-dropdown
 @import ./components/massive-actions-dropdown
+@import ./components/invite-employee-dropdown
