--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -40,7 +40,7 @@
                     .input-group__prepend
                       p Your prefered price per <span class="font-bold">1 word</span>
                     .input-group__input
-                      +input({})(type="number" placeholder="0.00")
+                      +input({bg:'alabaster'})(type="number" placeholder="0.00")
                     .input-group__append.input-group__append--p-0
                       +currency-select()
 
