--- a/app/pug/partials/massive-actions-dropdown.pug
+++ b/app/pug/partials/massive-actions-dropdown.pug
@@ -7,4 +7,4 @@ mixin massive-actions-dropdown(props = {})
         span Massive Actions
         +icon({name:'chevron-down', fill:'boston-blue', width:'8', height:'6', classes:'button__icon'})
     .dropdown__body.massive-actions-dropdown__body
-      +actions()
+      +actions({skip:'Edit permissions'})
